# rsfb

./: .gitignore  Cargo.toml  README.md  build.rs
bindgen/: bindgen.py  config.json  result.txt  target.cpp
bingen/: bindgen.py  config.json
cfbapi/: CMakeLists.txt  bindgen.py  cfbapi.cpp
fbapi-cwrap/: CMakeLists.txt  fbapi-cwrapper.cpp
src/: component.rs  detail.rs  fbapi.rs  lib.rs  pbuilder.rs  test.rs  types.rs
src/component/: error.rs  pbuilder.rs  sqltype.rs
src/detail/: fbapi.rs  util.rs
src/detail/util/: share.rs  stdimport.rs  types.rs
src/fbapi/: .gitignore  constants.rs
